--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "eslint": "^3.17.1",
+    "eslint-plugin-react": "^6.10.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
